# CLIP-DLUT

./: .dockerignore  .gitignore  Dockerfile  README.md  _README.md  app.py  doc.md  docker-compose.yml  gradio_app.py  main.py  output.cube  podman_deploy.sh  prompt.md  pyproject.toml  requirements.txt  test_api.py
backend/: main.py
backend/core/: celery_app.py  config.py
backend/schemas/: requests.py  responses.py  tasks.py
backend/tasks/: processing.py
backend/utils/: image_tool.py  lut_utils.py
docs/: doc.md
model/: run.py
model/modules/: clip_loss.py  dynamics_applier.py  gradient_predictor.py  image_preprocesser.py  loss.py  lut_applier.py  residual_lut.py
